--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "client/package.json",
-      "use": "@vercel/vite",
-      "config": { "distDir": "dist" }
+      "src": "vercel-build.sh",
+      "use": "@vercel/static-build",
+      "config": { 
+        "distDir": "client/dist"
+      }
     },
     {
       "src": "api/server.js",
@@ -20,5 +22,6 @@
       "src": "/(.*)",
       "dest": "/client/dist/$1"
     }
-  ]
+  ],
+  "outputDirectory": "client/dist"
 }
