--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "vercel-build.sh",
       "use": "@vercel/static-build",
       "config": { 
-        "distDir": "client/dist"
+        "distDir": "dist"
       }
     },
     {
