--- a/vercel.json
+++ b/vercel.json
@@ -2,25 +2,25 @@
   "version": 2,
   "builds": [
     {
-      "src": "vercel-build.sh",
+      "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": { 
-        "distDir": "client/dist"
+        "distDir": "dist"
       }
     },
     {
-      "src": "api/**/*.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-     "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "src": "/api/(.*)",
+      "dest": "api/index.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/client/dist/$1"
+      "dest": "client/dist/$1"
     }
   ],
   "outputDirectory": "client/dist"
