--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.11.0",
+    "path": "^0.12.7",
     "pg": "^8.12.0",
     "ssl-root-cas": "^1.3.1"
   }
